generated/checkers/gen/AllGen-Concurrency-7d42e097607c4d246d99225bf2b195b6167a210c/build_logs/syntax-repair-01/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkEndFunction(const clang::ReturnStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:219:24: error: ‘const class clang::ento::ProgramState’ has no member named ‘begin’
  219 |   for (auto I = State->begin<CompUseMap>(), E = State->end<CompUseMap>(); I != E; ++I) {
      |                        ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:219:40: error: expected primary-expression before ‘>’ token
  219 |   for (auto I = State->begin<CompUseMap>(), E = State->end<CompUseMap>(); I != E; ++I) {
      |                                        ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:219:42: error: expected primary-expression before ‘)’ token
  219 |   for (auto I = State->begin<CompUseMap>(), E = State->end<CompUseMap>(); I != E; ++I) {
      |                                          ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:219:80: error: ‘E’ was not declared in this scope
  219 |   for (auto I = State->begin<CompUseMap>(), E = State->end<CompUseMap>(); I != E; ++I) {
      |                                                                                ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:224:53: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  224 |       const Stmt *Last = State->get<CompLastUseStmt>(B);
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
      |                                                     |
      |                                                     clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
